tdf#126133 Chart OOXML import: set default text rotation to 0°

for the horizontal axis title, even if the position of the axis
is left or right.

With this, OOXML charts generated by third-party tools
imported without bad rotated title text (as previously in
commit fdb6d6ccf45e679ff3e369a876482b6801e08e25
[tdf#137734 Chart OOXML import: fix variable color charts],
without bad variable colors).

Change-Id: Id348fe037e4f1eb2d7253957224298aa95db5b15
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105012
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>